--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="search_destination">Destination</string>
     <string name="search_date">Date</string>
     <string name="search_button">Rechercher</string>
+    <string name="travel_button">Trouver un itinéraire</string>
+    <string name="toast">Merci d\'entrer le point de départ et la destination</string>
+    <string name="announce">Résultat pour le trajet : </string>
 
 
 
