--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Blabla_Wild</string>
+    <string name="start_button">Rechercher un itinéraire</string>
+    <string name="welcome">Bienvenue ! cliquez pour démarrer!</string>
     <string name="action_settings">Settings</string>
     <string name="search_text">Rechercher</string>
     <string name="search_depart">Départ</string>
