--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="search_button">Rechercher</string>
     <string name="travel_button">Trouver un itinéraire</string>
     <string name="dday">"La date de voyage souhaitée est le "</string>
+    <string name="noday">Aucune date de voyage indiquée</string>
     <string name="toast">Merci d\'entrer le point de départ et la destination</string>
     <string name="arrow"> >> </string>
 
