--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Blabla_Wild</string>
     <string name="start_button">Rechercher un itinéraire</string>
+    <string name="submit_button">Proposer un itinéraire</string>
+    <string name="submit_trip_button">Proposer cet itinéraire</string>
     <string name="welcome">Bienvenue ! cliquez pour démarrer!</string>
     <string name="action_settings">Settings</string>
     <string name="search_text">Rechercher</string>
@@ -11,9 +13,14 @@
     <string name="travel_button">Trouver un itinéraire</string>
     <string name="dday">"La date de voyage souhaitée est le "</string>
     <string name="noday">Aucune date de voyage indiquée</string>
-    <string name="toast">Merci d\'entrer le point de départ et la destination</string>
+    <string name="toast_search">Merci d\'entrer le point de départ et la destination</string>
+    <string name="toast_submit">Merci d\'entrer le point de départ, la destination, le prix et la date du trajet proposé</string>
+    <string name="toast_trip">Le trajet a été ajouté avec succès</string>
     <string name="arrow"> >> </string>
-
-
+    <string name="depart">Départ</string>
+    <string name="destination">Destination</string>
+    <string name="price">Prix</string>
+    <string name="date">Date</string>
+    <string name="hour">Heure</string>
 
 </resources>
