--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Blabla_Wild</string>
-    <string name="start_button">Rechercher un itinéraire</string>
-    <string name="submit_button">Proposer un itinéraire</string>
+    <string name="start_button">Rechercher un voyage</string>
+    <string name="submit_button">Proposer un voyage</string>
     <string name="submit_trip_button">Proposer cet itinéraire</string>
-    <string name="welcome">Bienvenue ! cliquez pour démarrer!</string>
+    <string name="welcome">"Bienvenue "</string>
+    <string name="account">Cliquez pour voir votre profil!</string>
     <string name="action_settings">Settings</string>
     <string name="search_text">Rechercher</string>
     <string name="search_depart">Départ</string>
@@ -22,5 +23,22 @@
     <string name="price">Prix</string>
     <string name="date">Date</string>
     <string name="hour">Heure</string>
+    <string name="buttonDisconnect">Déconnexion</string>
+    <string name="textViewSignIn">Bienvenue, connecte-toi!</string>
+    <string name="userEmail">Email</string>
+    <string name="userPwd">Mot de Passe</string>
+    <string name="textViewsignUpNew">Pas encore de compte? Inscris-toi!</string>
+    <string name="buttonSignUp">Créer un compte</string>
+    <string name="textViewSignUp">Créer un compte</string>
+    <string name="buttonSignIn">Se connecter</string>
+    <string name="textViewSignedUpAlready">Tu as déjà un compte? identifie-toi!</string>
+    <string name="userDisplayName">Pseudo</string>
+    <string name="toastDefaultEmail">"Merci de compléter ton Email</string>
+    <string name="toastDefaultPwd">Merci de renseigner ton mot de passe</string>
+    <string name="signInPending">Connexion en cours</string>
+    <string name="signInFailed">Oups es-tu certain d\'avoir un compte?</string>
+    <string name="signUpPending">Enregistrement</string>
+    <string name="auth_failed">Echec de la création de compte</string>
+    <string name="auth_succeeded">Création de compte réussie</string>
 
 </resources>
